<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>linrob_sim_cart</name>
  <version>0.0.1</version>
  <description>Simulation package</description>
  <maintainer email="info@matom.ai">Matomai</maintainer>
  <license>proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
